[package]
name = "v4zha-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
reqwest={version="0.11",features=["json"]}
dotenv="0.15"
tokio={version="1.12.0",features=["full"]}
serde = {version="1.0",features=["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
actix-cors = "^0.5"